Correct wrap of header

--- a/yangshi/qi.css
+++ b/yangshi/qi.css
@@ -26,6 +26,12 @@ table {
   color: white;
 }
 
+#header:after {
+  display: block;
+  clear: both;
+  content: '';
+}
+
 #header #logo {
   text-decoration: none;
   color: gold;
@@ -41,7 +47,10 @@ table {
 #header #tel {
   display: inline-block;
   position: relative;
-  top: 1ex;
+  -position: absolute;
+  -top: 0;
+  -right: 0;
+  margin: 1ex 0;
   float: right;
   text-align: right;
 }
